--- a/css/site.css
+++ b/css/site.css
@@ -97,3 +97,8 @@ h3.MonsterName span.Tags {
     padding-top: 60px;
     margin-top: -60px;
 }
+h3.MonsterName.anchor {
+    padding-top: 60px;
+    margin-top: 0em;
+}
+
