--- a/css/site.css
+++ b/css/site.css
@@ -51,6 +51,7 @@ p.NoIndent {
 }
 
 p.Item,p.MagicItem {
+   text-indent:0;
    font-weight:bold;
 }
 span.Tags {
@@ -125,7 +126,7 @@ hr {
 /* Tag */
 tag {
   font-size: 0.9em;
-  margin: 2px;
+  margin: 1px;
   padding: 3px;
   background: #ddd;
 }
