--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/earlyaccess/cwtexkai.css);
+@import url('https://fonts.googleapis.com/earlyaccess/cwtexkai.css');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
 
 html {
 }
@@ -47,7 +48,11 @@ li.currentli.headli:not(.active) {
 h1, h2, h3, h4 {
   font-weight: bold;
 }
+h3 {
+  color: #00126b;
+}
 h4 {
+  color: #0220b5;
   margin-top: 28px;
 }
 
@@ -96,14 +101,15 @@ p.Requirement {
 }*/
 
 h3.MonsterName {
-   border-top:medium solid black;
-   padding-top:1em;
-   padding-bottom: 0.2em;
-   margin-bottom: 0.2em;
-   border-bottom: solid 1px black;
+  color: #000;
+  border-top:medium solid black;
+  padding-top:1em;
+  padding-bottom: 0.2em;
+  margin-bottom: 0.2em;
+  border-bottom: solid 1px black;
 }
 h3.MonsterName span.Tags, h3.SpellName span.Tags {
-   font-size:70%;
+  font-size:70%;
 }
 
 #site-nav {
@@ -171,7 +177,11 @@ tag.purple { background: #cfb4ff; }
   padding: 5px;
   margin: 0.5em 0 1em;
 }
+.Spell h3 {
+  color: #000;
+}
 .Move h3, .Hireling h4, .Block h4 {
+  color: #000;
   margin-top: 0.2em;
 }
 .Move p {
@@ -194,7 +204,7 @@ tag.purple { background: #cfb4ff; }
   margin-left: 50px;
   margin-bottom: 20px;
   border-radius: 5px;
-  color: #555;
+  color: #222;
   font-family: 'cwTeXKai', serif;
 }
 .Example+.Example {
